--- a/package.yaml
+++ b/package.yaml
@@ -10,6 +10,7 @@ extra-source-files:
 
 dependencies:
 - base
+- stm
 - vty
 
 executables:
@@ -20,3 +21,4 @@ executables:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -W -Wall -Wunused-imports
