[BROKEN] split playTUI into reusable pieces
I'm going to have two sources of events, so I would like to split the
current source of event from the logic which updates the screen.

however, it doesn't look like I did this quite right, as the screen is
updated with a one key delay, which is super annoying because you don't
see the key you just pressed...

--- a/package.yaml
+++ b/package.yaml
@@ -9,10 +9,12 @@ extra-source-files:
 - README.md
 
 dependencies:
+- async
 - base
 - bytestring
 - network-simple
 - stm
+- stm-chans
 - vty
 
 executables:
